--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -15,7 +15,15 @@
 полупроводников типа A3B5 (GaAs, PbSb или InP), которые имеют высокое поглощение на оптических 
 фононах в диапазоне 5-15 THz.
 
-Альтернативой QCL являются лазеры на 
+Альтернативой QCL являются лазеры на основе межзонных переходах в узкозонных полупроводниковых структурах.
+Такие лазеры намного проще в изготовлении, а также могут излучать в диапазоне 5-15 THz. Однако ограничивающим
+фактором является процесс безызлучательной Оже-рекомбинации. При этом традиционна ожидается, что этот процесс
+рекомбинации будет весьма существенным.
+
+Оже-рекомбинация представляет собой безызлучательный трёхчастичный процесс. По типу носителей заряда, участвующих
+в процессе он делится на CCV и VVC процессы (процесс с участием двух электронов и дырки и процесс с двумя дырками
+и электронм соответственно). В ходе этого процесса пара носителей с противоположным зарядом взаимоуничтожается и
+передаёт энергию и импульс третьему. В силу выполнения законов сохранения этот процесс является пороговым.
 
 
 Проблема создания источников терагерцевого (ТГц) излучения 
