--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -24,49 +24,31 @@
 в процессе он делится на CCV и VVC процессы (процесс с участием двух электронов и дырки и процесс с двумя дырками
 и электронм соответственно). В ходе этого процесса пара носителей с противоположным зарядом взаимоуничтожается и
 передаёт энергию и импульс третьему. В силу выполнения законов сохранения этот процесс является пороговым.
+Поэтому температура сильнг влияет на темп таких процессов, а значит и на эффективность лазеров.
 
+Повлиять на это можно, варьируя материалы/структуры и изменяя тем самым дисперсионные соотношения в них. В частности,
+существуют законы дисперсии, в которых такие процессы принципиально запрещены законами сохраниения (к примеру Дираковский 
+или графеноподобный закон дисперсии), а возможны структуры, в которых энергетический порог таких эффектов стремится к нулю.
 
-Проблема создания источников терагерцевого (ТГц) излучения 
-является одной из самых актуальных тем современной прикладной 
-физики. Для многих приложений, связанных со спектроскопией, в 
-качестве источников длинноволнового излучения выгодно использовать 
-компактные полупроводниковые лазеры. Квантовые каскадные лазеры (ККЛ) 
-демонстрируют высокие характеристики в спектральном диапазоне от 1 ТГц 
-до 5ТГц и выше 15 ТГц. Однако, для подавляющего большинства ККЛ 
-используются полупроводники типа А3В5 (GaAs, PbSb или InP), в которых фононное 
-поглощение становится слишком сильным на частотах ниже 15 ТГц. ККЛ на основе GaN подступают 
-к спектральному диапазону 5 - 15 ТГц со стороны низких частот (относительно частот 
-оптических фононов), но их рабочие характеристики требуют значительного улучшения. 
-Межзонные лазеры представляются простой альтернативой ККЛ, но для их создания требуются 
-узкозонные полупроводниковые структуры, в которых, в свою очередь, ожидается высокая эффективность 
-безызлучательной оже-рекомбинации. Спектральный диапазон 5 - 15 ТГц к настоящему моменту частично 
+Спектральный диапазон 5 - 15 ТГц к настоящему моменту частично 
 перекрыт лишь диодными лазерами на основе халькогенидов свинца-олова, которые обеспечивают длины 
 волн излучения вплоть до 46.5 мкм. Фактор, который снижает эффективность оже-рекомбинации в PbSnSe(Te)
- - симметрия между законами дисперсии носителей в зоне проводимости и в валентной зоне. Можно показать, 
- что для выполнения законов сохранения энергии-импульса, суммарная кинетическая энергия трех частиц, участвующих 
- в процессе рекомбинации, должна быть выше некоторого порогового значения энергии $E_{th}$, который зависит 
- от энергетического спектра носителей. Для некоторых типов спектров носителей, например, для релятивистских 
- фермионов Дирака, выполнить законы сохранения энергии-импульса в ходе оже-процесса невозможно, т.е. $E_{th}$ бесконечна. 
- Отметим, что симметрия законов дисперсии электронов и дырок реализуется для безмассовых фермионов Дирака в графене, 
- однако вопрос об эффективности оже-рекомбинации в графеновых структурах до сих пор дебатируется, так что предельный 
- случай релятивистского спектра с нулевой запрещенной зоной и линейным законом дисперсии требует отдельного рассмотрения. 
- Что же касается лазеров на основе халькогенидов свинца-олова, их рабочие характеристики ограничены технологией роста: существуют
-  труднопреодолимые проблемы в реализации квантовых ям (КЯ) для твердых растворов PbSnSe(Te) и остаточная концентрация носителей
-   остается на высоком уровне 1017 $\text{см}^{-3}$.
+- симметрия между законами дисперсии носителей в зоне проводимости и в валентной зоне. Однако их рабочие характеристики 
+ограничены технологией роста: существуют труднопреодолимые проблемы в реализации квантовых ям (КЯ) для твердых растворов 
+PbSnSe(Te) и остаточная концентрация носителей остается на высоком уровне $10^17 \text{cm}^{-3}$.
 
 Существуют альтернативные полупроводниковые системы, которые позволяют
-         приблизиться к «графеноподобному» закону дисперсии, но сохранить конечную ширину запрещенной зоны. 
-         Как было показано в многочисленных работах, одна из таких систем -- гетероструктуры с КЯ на основе Hg(Cd)Te/CdHgTe. 
-         В отличие от графена, в структурах на основе HgCdTe (КРТ) с КЯ можно перестраивать ширину запрещенной зоны путем изменения ширины КЯ и 
-         содержания Cd в ней. Современная молекулярно-лучевая эпитаксия (МЛЭ) обеспечивает высокое качество эпитаксиальных пленок КРТ не только на подложках CdZnTe, 
-         но и на «альтернативных» подложках GaAs. Высокое качество эпитаксиальных структур HgCdTe, выращенных на GaAs подложках, было подтверждено в ходе исследований 
-         фотопроводимости (ФП) и фотолюминесценции (ФЛ) в среднем и дальнем инфракрасном диапазонах ($λ$ = 15-30 мкм). В недавней работе нами было получено 
-         стимулированное излучение (СИ) в КРТ структурах с КЯ на длине волны $λ$ = 19.5 мкм, в то время как ранее лазерная генерация в HgCdTe была 
-         продемонстрирована лишь в коротковолновой области среднего инфракрасного диапазона спектра (на длинах волн 2 - 5 мкм). 
+приблизиться к «графеноподобному» закону дисперсии, но сохранить конечную ширину запрещенной зоны. 
+Как было показано в многочисленных работах, одна из таких систем -- гетероструктуры с КЯ на основе Hg(Cd)Te/CdHgTe. 
+В отличие от графена, в структурах на основе HgCdTe (КРТ) с КЯ можно перестраивать ширину запрещенной зоны путем изменения ширины КЯ и 
+содержания Cd в ней. Современная молекулярно-лучевая эпитаксия (МЛЭ) обеспечивает высокое качество эпитаксиальных пленок КРТ не только на подложках CdZnTe, 
+но и на «альтернативных» подложках GaAs. Высокое качество эпитаксиальных структур HgCdTe, выращенных на GaAs подложках, было подтверждено в ходе исследований 
+фотопроводимости (ФП) и фотолюминесценции (ФЛ) в среднем и дальнем инфракрасном диапазонах ($λ$ = 15-30 $\mu m$). Было получено 
+стимулированное излучение (СИ) в КРТ структурах с КЯ на длине волны $λ$ = 19.5 $\mu m$, в то время как ранее лазерная генерация в HgCdTe была 
+продемонстрирована лишь в коротковолновой области среднего инфракрасного диапазона спектра (на длинах волн 2 - 5 $\mu m$). 
 Для структур, рассчитанных на генерацию длинноволнового излучения, требуется рост толстых эпитаксиальных слоев (общей толщиной до 20 мкм) для реализации диэлектрического волновода. 
 Целью работы настоящей работы было исследование длинноволнового СИ из подобных структур и выявление факторов, определяющие наблюдаемые характеристики СИ, и возможных путей подавления 
 безызлучательной рекомбинации в таких структурах. В работе было продемонстрировано, что генерация СИ в таких структурах возможна. Тем не менее, профиль КЯ в волноводных 
-структурах отличается от прямоугольного, что необходимо учитывать при анализе экспериментальных данных. В данной работе для модельного описания мы использовали профиль прямоугольной 
-ямы с отличным от нуля содержанием кадмия, что позволяет хорошо описать зависимость ширины основного перехода от температуры, наблюдаемую в эксперименте. 
+структурах отличается от прямоугольного, что необходимо учитывать при анализе экспериментальных данных.
 \newpage
 \end{document}
