--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -1,3 +1,5 @@
+\documentclass[../main.tex]{subfiles}
+
 \begin{document}
 Одной из наиболее актуальных проблем современной прикладной физики является
 получение источников когерентного излучения терагерцового (THz) диапазона. Такие
