--- a/sections/measTechnique.tex
+++ b/sections/measTechnique.tex
@@ -1,3 +1,5 @@
+\documentclass[../main.tex]{subfiles}
+
 \begin{document}
     \begin{center}
         \subsection{Методики измерений}
@@ -46,10 +48,10 @@
     Основным ПО при обработке спектров являлся Opus 7.0. В частности это позволяет записывать временно-разрещённые спектры,
     а также в существенной мере отфильтровать шумы посредством правильной рбработки интерферограммы.
 
-    Иной важной техникой является \paragraph{измерение фотопроводимости}. Эта техника позволяет с высокой степенью точности
-    определять ширину запрещённой зоны в сплошных полупроводниках, а также уровни размерного квантования в случае гетероструктур
+    Иной важной техникой является \textbf{измерение фотопроводимости}. Этот метод позволяет с высокой степенью точности
+    определять ширину запрещённой зоны полупроводниках, а также уровни размерного квантования в случае гетероструктур
     с квантовыми ямами. Это требуется для оценки содержания кадмия в барьерах и внутреннем пространстве квантовых ям, а также
-    для проверки точности выполнения гетероструктуры в поперечном плоскости образца направлении.
+    для проверки точности исполнения гетероструктуры в поперечном плоскости образца направлении.
 
     Фурье спектрометр в данном случае работает в режиме непрерывного сканирования, а образец охлаждается иммерсивно.
     Для таких ихмерений важно исключить влияние спектра поглощения хладагента на результирующий спектр, для этого
@@ -64,14 +66,15 @@
     с индиевым припоем (выбор обусловлен схожим с образцами коэффициентом линейного температурного расширения, что позволяет 
     обеспечить надежный контакт с поверхностью полупроводника при любой температуре).
 
-    В качестве эталонного источника излучения в данном типк измерений использовался т.н. глобар - источник излучения среднего 
+    В качестве эталонного источника излучения в данном типе измерений использовался глобар - источник излучения среднего 
     инфракрасного излучения, имеюющий спектр, близкий к спектру абсолютно чёрного тела. Такая спектральная характеристика
     позволяет проводить точную нормировку сигнала с учетом сравнения ее с заведомой известной аппаратной
     функцией прибора.
     
-    Кроме вышеперечисленного оборудования использовался также токовый усилитель Standford SR570, который также способен выдавать
+    Кроме вышеперечисленного оборудования использовался токовый усилитель Standford SR570, который также способен выдавать
     ток смещения. В силу специфики образцов мы можем считать их сопротивление линейным, посему полученный
     в результате измерений, сигнал не нуждается в дополнительной обработке.
+
 \begin{figure}[h]
     \begin{minipage}[h]{\linewidth}
     \centering
@@ -107,7 +110,7 @@
         \filldraw[fill=lightgray] (14, -0.5) rectangle (15, 0.5);
         \node at (14.5, 1) {PC \& Software};
     \end{tikzpicture}
-    \caption{Схема измерения фотолюминисценции}
+    \caption{\label{PLScheme} Схема измерения фотолюминисценции}
     \end{minipage}
     \vfill
     \begin{minipage}[h]{\linewidth}
@@ -143,7 +146,7 @@
         \filldraw[fill=lightgray] (5.5, -1) rectangle (7.5, 1);
         \node at (6.5, 1.5) {Fourier spectrometer};
         \end{tikzpicture}
-        \caption{Геометрия задачи исследования фотолюминисценции}
+        \caption{\label{PLGeometry} Геометрия задачи исследования фотолюминисценции}
     \end{minipage}
     \vfill
     \begin{minipage}[h]{\linewidth}
@@ -204,7 +207,9 @@
 				\draw[->, thick, dashed] (6.75, 0.875) -- (7, 0.875)
 					-- (7, -4.375) -- (6.75, -4.375);
             \end{tikzpicture}
-            \caption{Принципиальная схема измерения фотопроводимости}
+            \caption{\label{PCScheme} Принципиальная схема измерения фотопроводимости}
+            A - сосуд Дюара, B - жидкий гелий или азот, C - оптический тракт, D - фурье-спектрометр, 
+            E - источник излучения, G - ПК и ПО.
     \end{minipage}
 \end{figure}
 
