--- a/sections/myComputations.tex
+++ b/sections/myComputations.tex
@@ -1,3 +1,5 @@
+\documentclass[../main.tex]{subfiles}
+
 \begin{document}
     \begin{center}
         \subsection{Рассчет минимальной энергии Оже-процесса}
@@ -30,8 +32,8 @@
         Очевидно, что в общем виде эта задача сложна по нескольким причинам:
         \begin{itemize}
             \item амплитуда такого рассеяния может быть найдена как с
-                помощью диаграмной техники Келдыша [ссылка на статью], 
-                так и с помощью метода последовательных приближений [ссылка],
+                помощью диаграмной техники Келдыша \cite{AugerDiagrams}, 
+                так и с помощью метода последовательных приближений \cite{SucApprAnd, SucApprAgr},
                 однако в обоих случаях имеется сильное расхождение
                 теории и эксперимента [ссылка];
             \item Подобные рассчеты весьма вычислительно сложны и не могут
@@ -89,18 +91,20 @@
             \varepsilon_1(k_1) + \varepsilon_2(k_2) + \varepsilon_h(k_h) - \varepsilon_f(k_1 + k_2 + k_h);
         \end{eqnarray}
 
-        Также стоит отметить, что зачастую удобно использовать сплайны Акимы, поскольку они позволяют существенно уменьшить
-        численные дефекты, связанные с осцилляциями сплайна. Это позволяет значит увеличить точность вычислейний, а также убрать ложные
+        Также стоит отметить, что зачастую удобно использовать сплайны Акимы [\citation{AkimaSplines}], поскольку они позволяют существенно уменьшить
+        численные артефакты, связанные с переколебаниями сплайна. Это позволяет значит увеличить точность вычислейний, а также убрать ложные
         участки дисперсионного соотношения, имеющие необходимую радиальную компоненту градиента.
 
         Следует отметит, что ввиду наличия большого количества локальных минимумов функции процесс её оптимизации представляется далеко нетривиальной задачей.
         В ходе работы были опробованы различные методы глобальной оптимизации - основанные на стохастических процессах (метод роя частиц, метод 
-        симуляции холодного отжига), а также методы  сокращения исследуемой области. Однако наиболее эффективным является метод разбиения 
-        дисперсионного соотношения на участки, имеющие одинаковый знак первой производной и выбор наборв таких участков,
-        на которых может бьыть реализована ситуация совпадения групповых скоростей квазичастиц.
+        симуляции холодного отжига), а также методы сокращения исследуемой области. Однако наиболее эффективным является метод разбиения 
+        дисперсионного соотношения на участки, имеющие одинаковый знак первой производной и выбор наборов таких участков,
+        на которых может бьыть реализована ситуация совпадения групповых скоростей квазичастиц. В дальнейшем выбиралась произвольная точка этого диапазона
+        и от нее проводилась оптимизация методом AUGLAG \cite{AuglagOptim} с наложенными ограничниями при помощи пакета NLOpt \cite{NLopt}.
 
         В результате такого рассмотрения были получены интересные закономерности в случае гетероструктур, содержащих ямы с большой концентрацией кадмия.
         В частности было выявлено несколько характерных паттернов.
+        
         \begin{figure}[h!]
             \begin{minipage}[h]{0.3\linewidth}
                 \begin{center}
