--- a/sections/intro.tex
+++ b/sections/intro.tex
@@ -15,7 +15,9 @@
 Они демоснтрируют превосходные характеристики (высокий КПД, высокий уровень когерентности)
 в диапазоне 1-5 THz и выше 15 THz. Однако большая часть таких лазеров создается на основе 
 полупроводников типа A3B5 (GaAs, PbSb или InP), которые имеют высокое поглощение на оптических 
-фононах в диапазоне 5-15 THz.
+фононах в диапазоне 5-15 THz. QCL на основе GaN подступают к спектральному диапазону 5 - 15 ТГц со
+стороны низких частот (относительно частот оптических фононов), но их рабочие характеристики 
+требуют значительного улучшения \cite{Intro7}.
 
 Альтернативой QCL являются лазеры на основе межзонных переходах в узкозонных полупроводниковых структурах.
 Такие лазеры намного проще в изготовлении, а также могут излучать в диапазоне 5-15 THz. Однако ограничивающим
@@ -34,7 +36,7 @@
 
 Спектральный диапазон 5 - 15 ТГц к настоящему моменту частично 
 перекрыт лишь диодными лазерами на основе халькогенидов свинца-олова, которые обеспечивают длины 
-волн излучения вплоть до 46.5 мкм. Фактор, который снижает эффективность оже-рекомбинации в PbSnSe(Te)
+волн излучения вплоть до 46.5 мкм \cite{Intro8}. Фактор, который снижает эффективность оже-рекомбинации в PbSnSe(Te) \cite{Intro1}, \cite{Intro9}
 - симметрия между законами дисперсии носителей в зоне проводимости и в валентной зоне. Однако их рабочие характеристики 
 ограничены технологией роста: существуют труднопреодолимые проблемы в реализации квантовых ям (КЯ) для твердых растворов 
 PbSnSe(Te) и остаточная концентрация носителей остается на высоком уровне $10^17 \text{cm}^{-3}$.
