--- a/sections/myComputations.tex
+++ b/sections/myComputations.tex
@@ -36,13 +36,13 @@
                 так и с помощью метода последовательных приближений \cite{SucApprAnd, SucApprAgr},
                 однако в обоих случаях имеется сильное расхождение
                 теории и эксперимента [ссылка];
-            \item Подобные рассчеты весьма вычислительно сложны и не могут
+            \item подобные рассчеты весьма вычислительно сложны и не могут
                 быть использованы в поиске оптимального дизайна структуры.
         \end{itemize}
 
         Однако есть и куда более простой способ - отыскание порога Оже-процесса.
-        С учетом наличия возможности рассчета дисперсионного соотношения 
-        [ссылка на статью Жолудева/Алешкина] и наличия законов сохранения в таких
+        С учетом наличия возможности рассчета дисперсионного соотношения методом Кейна 8x8
+        \cite{HgCdTeCalcZholudev} и наличия законов сохранения в таких
         процессах задача может быть сведена к оптимизации некой характеристической
         функции.
 
@@ -52,16 +52,19 @@
         $\vec{k}_1,~\vec{k}_2,~\vec{k}_f$ и дисперсионные 
         соотношения $\varepsilon_1,~\varepsilon_2,~\varepsilon_f$ и одну для частицы типа $j$,
         соответствующую $\vec{k}_j,~\varepsilon_j$ (подразумевается, что 
-        $\varepsilon_j \geq 0, \forall \vec{k}_j$). Будем оптимизировать функцию 
+        $\varepsilon_j \geq 0, \forall \vec{k}_j$). Будем оптимизировать (минимизировать) функцию, 
+        характеризующую "кинетическую" энергию частицы, оставшейся после участия в акте Оже-рекомбинации 
+        (что эквивалентно оптимизации "кинетической" энергии трех частиц до взаимодействия):
+        
         \begin{equation}
             \varkappa = \varepsilon_f(\vec{k}_1 + \vec{k}_2 + \vec{k}_j) - E_g.
         \end{equation}
 
         С учетом условий:
-        \begin{eqnarray}
-            \vec{k}_1 + \vec{k}_2 + \vec{k}_j - \vec{k}_f = 0;\\
-            \varepsilon_1(\vec{k}_1) + \varepsilon_2(\vec{k}_2) + \varepsilon_j(\vec{k}_j) - \varepsilon_f(\vec{k}_f) = 0;
-        \end{eqnarray}
+        %\bea
+        %    \vec{k}_1 + \vec{k}_2 + \vec{k}_j - \vec{k}_f = 0;\\
+        %    \varepsilon_1(\vec{k}_1) + \varepsilon_2(\vec{k}_2) + \varepsilon_j(\vec{k}_j) - \varepsilon_f(\vec{k}_f) = 0;
+        %\eea
 
         Подставим закон сохранения импулься сразу и воспользуемся методом неопределённых множителей:
         \begin{equation}
@@ -84,14 +87,14 @@
         очевидно в таком случае для минимизации энергии требуется коллинеарность всех импульсов. 
         В таком случае можно достаточно просто численно определить пороговую энергию Оже процесса, что и было сделано.
 
-        Для этого входные данные (представленные в виде tab-разделённого файла) считываются и по ним строится интерполяция,
+        Для этого входные данные считываются и по ним строится интерполяция,
         в виде сплайна третьего порядка. В дальнейшем производится оптимизация функции с условием:
         \begin{eqnarray}
             \varkappa  = \varepsilon_f(k_1 + k_2 + k_h) - E_g;\\
             \varepsilon_1(k_1) + \varepsilon_2(k_2) + \varepsilon_h(k_h) - \varepsilon_f(k_1 + k_2 + k_h);
         \end{eqnarray}
 
-        Также стоит отметить, что зачастую удобно использовать сплайны Акимы [\citation{AkimaSplines}], поскольку они позволяют существенно уменьшить
+        Также стоит отметить, что зачастую удобно использовать сплайны Акимы \cite{AkimaSplines}, поскольку они позволяют существенно уменьшить
         численные артефакты, связанные с переколебаниями сплайна. Это позволяет значит увеличить точность вычислейний, а также убрать ложные
         участки дисперсионного соотношения, имеющие необходимую радиальную компоненту градиента.
 
@@ -159,8 +162,5 @@
 
         Причем в структурах с большим содержанием кадмия в квантовых ямах наблюдается тенденция к образованию
         подобных побочных максимумов. 
-
-
-        [картинки c примерами]
     \newpage
 \end{document}
