--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,46 +1,109 @@
 @online{NLopt,
     title = {The NLopt nonlinear-optimization package},
     author = {Steven G. Johnson},
-    url = {http://github.com/stevengj/nlopt}
+    url = {http://github.com/stevengj/nlopt},
+    year = {2014}
 }
 
 @article{AugerDiagrams,
-    title = {Auger Recombination from first principles},
-    author = {Daniel Steiauf, Emmanouil Kioupakis, Chris G. Van de Walle},
-    journal = {ACS Photonics},
-    year = {2003},
-    url = {https://www.mrl.ucsb.edu/~vandewalle/publications/ACS1,643(2014)-Steiauf-Auger.pdf}
+  title={Auger recombination in GaAs from first principles},
+  author={Steiauf, Daniel and Kioupakis, Emmanouil and Van de Walle, Chris G},
+  journal={Acs Photonics},
+  volume={1},
+  number={8},
+  pages={643--646},
+  year={2014},
+  publisher={ACS Publications}
 }
 
 @article{AkimaSplines,
-    title = {A new method of interpolation and smooth curve 
-    fitting based on local procedures},
-    author = {Hiroshi Akima},
-    year = {1970},
-    jornal = {Journal of the Association for Computing Machinery},
-    url = {http://www.leg.ufpr.br/lib/exe/fetch.php/wiki:internas:biblioteca:akima.pdf}
+  title={A new method of interpolation and smooth curve fitting based on local procedures},
+  author={Akima, Hiroshi},
+  journal={Journal of the ACM (JACM)},
+  volume={17},
+  number={4},
+  pages={589--602},
+  year={1970},
+  publisher={ACM}
 }
 
-@article{AuglagOptim,
-    title = {A Fortran Package for Large-Scale Nonlinear Optimization},
-    author = {Conn A.R., Gould N.I.M., Ph. Toint L.},
-    year = {1992},
-    journal = {Springer-Verlag}
+@book{AuglagOptim,
+  title={LANCELOT: a Fortran package for large-scale nonlinear optimization (Release A)},
+  author={Conn, Andrew R and Gould, GIM and Toint, Philippe L},
+  volume={17},
+  year={2013},
+  publisher={Springer Science \& Business Media}
 }
 
 @article{SucApprAnd,
-    title = {Theoretical study of Auger recombination in a GaInNAs quantum well laser structure},
-    author = {Andreev A.D.},
-    year = {2004},
-    journal = {Applied Physics Letters}
+  title={Theoretical study of Auger recombination in a GaInNAs 1.3 $\mu$ m quantum well laser structure},
+  author={Andreev, AD and O’Reilly, Eoin P},
+  journal={Applied physics letters},
+  volume={84},
+  number={11},
+  pages={1826--1828},
+  year={2004},
+  publisher={AIP}
 }
 
-@article{SucApprAgr,
-    author = {Agrawal G.P., Dutta N.K.},
-    title = {Long-Wavelength Semiconductor Lasers},
-    journal  = {Van Nostrand Reinhold},
-    year = {1993}
+@inproceedings{SucApprAgr,
+  title={Long wavelength semiconductor lasers},
+  author={Dutta, Niloy K},
+  booktitle={Technical Digest., International Electron Devices Meeting},
+  pages={304--306},
+  year={1988},
+  organization={IEEE}
 }
+
+@article{Intro1,
+  title={Инфракрасная люминесценция и характеристики энергетического спектра полупроводников типа А4В6},
+  author={Засавицкий, ИИ},
+  journal={Труды ФИАН. Оптические и электрические свойства полупроводников},
+  volume={224},
+  pages={3--118},
+  year={1993}
+}
+
+@article{Intro9,
+  title={Band structure and laser action in Pb x Sn 1- x Te},
+  author={Dimmock, JO and Melngailis, Ivars and Strauss, AJ},
+  journal={Physical Review Letters},
+  volume={16},
+  number={26},
+  pages={1193},
+  year={1966},
+  publisher={APS}
+}
+
+@inproceedings{Intro7,
+  title={Terahertz Physics, Devices, and Systems IX: Advanced Applications in Industry and Defense},
+  author={Anwar, Mehdi F and Crowe, Thomas W and Manzur, Tariq},
+  booktitle={Proc. of SPIE Vol},
+  volume={9483},
+  pages={948301--1},
+  year={2015}
+}
+
+
+@article{Intro8,
+  title={Terahertz Injection Lasers Based on a PbSnSe Solid Solution with an Emission Wavelength up to 50 $\mu$m and Their Application in the Magnetospectroscopy of Semiconductors},
+  author={Maremyanin, KV and Ikonnikov, AV and Bovkun, LS and Rumyantsev, VV and Chizhevskii, EG and Zasavitskii, II and Gavrilenko, VI},
+  journal={Semiconductors},
+  volume={52},
+  number={12},
+  pages={1590--1594},
+  year={2018},
+  publisher={Springer}
+}
+
+@book{HgCdTeCalcZholudev,
+    title = {Терагерцовая спектроскопия квантовых ям $Hg_{1−x} Cd_x Te$/$Cd_y Hg_{1−y} Te$},
+    author = {М.С. Жолудев},
+    year = {2013},
+    publisher = {IPM RAS}
+}
+
+
 
 
 
