Начало редактуры Морозова

--- a/main.tex
+++ b/main.tex
@@ -92,6 +92,8 @@
 
     \subfile{sections/samplesDesign.tex}
 
+    \subfile{sections/conclusion.tex}
+
     \bibliography{bibliography.bib} 
 
     \bibliographystyle{gost2008}
