--- a/sections/measTechnique.tex
+++ b/sections/measTechnique.tex
@@ -213,5 +213,39 @@
     \end{minipage}
 \end{figure}
 
+
+    В ходе работы были проведено множество экспериментов по измерению фотлюминисценции образцов.
+    Однако для иллюстрации зависимости порога Оже-процесса и температуры гашения СИ были избранны 
+    два образца:
+
+    Первым примером будет образец из ещё не вышедше статьи \cite{Utochkin}. Рассматривался образец, содержащий 10 несвязанных
+    (имеющих меж собой широкие и "высокие" барьеры) квантовых ям
+    состава Hg${}_{0.903}$Cd${}_{0.097}$Te/Cd${}_0.7$Hg${}_{0.3}$Te и толщиной 7.4 $nm$, что соответствует ширине 
+    запрещённой зоны около 90 $meV$ ($\lambda \sim 14~\mu m$) при $T = 18 ~K$. Структура не была намеренно легирована; остаточная концентрация 
+    носителей p-типа, полученная на основе холловских измерений, составляла порядка единиц $10^10~cm^{-2}$, а типичная 
+    плотность дислокаций $\sim 10^6~cm^{-2}$. Дизайн структуры ориентирован на эффективную локализацию света вблизи КЯ, для 
+    чего массив КЯ был выращен в волноводном слое толщиной в единицы мкм. Выбранное направление роста (013) 
+    препятствует использованию сколотых граней кристалла в качестве зеркал резонатора, т.к. плоскости сколов образуют
+    острый угол с плоскостью КЯ.
+
+    Второй образец использовался в статье \cite{Fadeev} и представляет собой 10 КЯ состава Cd0.1Hg0.9Te/Cd0.65Hg0.35Te.
+    Этот образец имеет ширину запрещённой зоны порядка 70 $meV$ ($\lambda \sim 18~\mu m$) и позволяет наблюдать стимулированное 
+    излучение на этой длине волны в диапазоне  20-40 K. В остальном эта структура аналогична предыдущей.
+
+    В ходе измерения были получены следующие спектры сфотолюминисценции:
+
+    [спектры]
+
+    Как можно видеть, при изменении температуры происходит сдвиг излучения в сболее коротковолновую область, а также снижение 
+    интенсивности стимулированного излучения. Отчасти снижение структуры может быть объсянено тем, что длина волны становится 
+    нерезонансной для внутренней волноводной структуры. С другой стороны, за счет нетипичного поведения ширины запрещенной 
+    зоны от температуры (для большинства иных материалов ширина запрещённой зоны падает с ростом температуры) начинается излучение
+    с меньшей длиной волны, что не так пагубно сказывается на добротности волновода как её рост. Отсюда можно сделать вывод о том, 
+    что этот эффект в данном случае не так существенен. Куда больше интереса представляет сравнение времен излучательной и 
+    Оже-рекомбинации, yесмотря на то, что с ростом ширины запрещенной зоны темп излучательных процессов в целом возрастает, 
+    как и порог безызлучательных процессов. Также возрастает населенность состояний с более высокой энергией, что напротив ё
+    стимулирует Оже-рекомбинацию.
+
+    Отсюда возникает задача сравнения порога Оже-рекомбинации и тепловой энергии частиц.
     \newpage
 \end{document}
