--- a/sections/myComputations.tex
+++ b/sections/myComputations.tex
@@ -5,23 +5,30 @@
         \subsection{Рассчет минимальной энергии Оже-процесса}
     \end{center}
 
-    Одной из основных задач является увеличение времени жизни носителей заряда,
-        для как можно большей эффективности процесса излучательной рекомбинации. 
-        Всвязи с этим важно иметь возможность оценить минимальную энергию, носителей, при которой возможен Оже-процесс.
+    Одним из способов увеличения интенсивности стимулированного излучения является повышение разности насселенностей,
+    что в случае подобных структур приводит к задаче увеличения времени жизни носителей заряда,
+    для как можно большей эффективности процесса излучательной рекомбинации. 
+    Всвязи с этим важно иметь возможность оценить минимальную энергию, носителей, при которой возможен Оже-процесс.
 
-        Можно рассмотреть влияние Оже-рекомбинации на функцию распределения, как наличие трехчастичного интеграла столкновений, который, как известно имеет вид:
-        \begin{multline}
-            \text{St}_i [f_i, ~f_j] (\vec{k}_i^{(2)}) = \int d^3 \vec{k}_i^{(1)} \int d^3 \vec{k}_i^{'(2)} \int d^3 \vec{k}_j 
-                \left\{ - \omega(\vec{k}_i^{(1)},~\vec{k}_i^{(2)},~\vec{k}_j \rightarrow \vec{k}_i^{'(2)})
-                f_i(\vec{k}_i^{(1)}) f_i(\vec{k}_i^{(2)})\right.\\
-                \left. f_j(\vec{k}_j) (1 - f_i(\vec{k}_i^{'(2)})) + 
-                \omega(\vec{k}_i^{(1)},~\vec{k}_i^{'(2)},~\vec{k}_j \rightarrow \vec{k}_i^{(2)})
-                f_i(\vec{k}_i^{(1)}) f_i(\vec{k}_i^{'(2)})
-                f_j(\vec{k}_j) (1 - f_i(\vec{k}_i^{(2)}));
-                \right\};
-        \end{multline}
+    Как известно, Оже-рекомбинация является трехчастичным процессом. Причем в таком процессе могут участвовать квазичастицы разных 
+    подзон - в таком случае выражение для частоты переходов будет содержать матричный элемент перехода, который оказывается не 
+    равным нулю. Кроме того выражение для этой частоты будет содержать в дельта функцию импульсов, что соответствует закону сохранения:
+    \begin{equation}
+        W \propto \delta(\vec{k}_{1i} + \vec{k}_{2i} + \vec{k}_{1j} - \vec{k}_{3i});
+    \end{equation}
 
-        Здесь $i,j$ - два сорта квазичастиц. Необходимо отметить наличие связи частот перехода:
+    При этом индексы $i,j$ - нумеруют типы квазичастиц (дырки или электроны). Все квазичастицы могут находиться в разных подзонах, иначе говоря
+    в данном случае не существует какого-то дополнительного закона сохранения, связанного с отбором некоторых веток дисперсионного соотношени.
+    $\vec{k}_{1i},~\vec{k}_{2i},~\vec{k}_{1j}$ - импульсы начальных частиц, $\vec{k}_{3i}$
+    - конечной.
+
+
+    
+
+    Здесь $i,j$ - типы квазичастиц (дырки и электроны), $\vec{k}_{1i},~\vec{k}_{2i},~\vec{k}_{1j}$ - импульсы начальных частиц, $\vec{k}_{3i}$
+    - конечной.
+
+        Здесь $i,j$ - два сорта квазичастиц (в частности, возможно ). Необходимо отметить наличие связи частот перехода:
         \begin{equation}
             \omega(\vec{k}_i^{(1)},~\vec{k}_i^{(2)},~\vec{k}_j \rightarrow \vec{k}_i^{'(2)})
                 \propto \delta_3 (\vec{k}_i^{(1)} + \vec{k}_i^{(2)} + \vec{k}_j - \vec{k}_i^{'(2)}) \cdot 
